# HighResMDE

./: .gitignore  README.md
data_formatting/: metric3d.ipynb
docker/: Dockerfile
get_planes/: check_planes.py  debug.py  debug_trimesh.py  generate_random_colors.py
get_planes/cpp/: CMakeLists.txt
get_planes/cpp/src/: gemini2L.yaml  get_rgb_regions.cpp  information_optimisation.cpp  information_optimisation.h  main.cpp  test.yaml  visualisation.cpp
get_planes/fun/: jlink.py  randomised_svd.py
get_planes/ransac/: angle_experiment.py  bag_to_video.py  compare_plane_with_label.py  compare_semantic.py  corner_experiment.py  create_video.py  default_gt.npy  depth_image.py  depth_image_sam.py  depth_plane_repair.py  depth_to_normal.py  depth_to_pcd.py  edge_detection.py  evaluate_fit.py  flatness_experiment.py  full_process.py  full_process_v2.py  gt.csv  information_estimation.py  jlinkage_test.py  limitation_images.py  mask_color.py  metrics.py  noise_model.npy  nyu_generate_planes.py  open3d_depth_img.py  open3d_get_mask.py  our_experiment.py  paper_img_graph.py  test.py  (+13 more)
nddepth_custom/: argument_infer_single_image.txt  arguments_train_nyu_custom.txt  eval.sh  infer_image.sh  train.py
nddepth_test/: arguments_train_nyu_custom.txt  infer_image.sh  train.py
src/: CutMix.py  debug.ipynb  eval_metric.py  evaluation_metric.py  global_parser.py  infer_image.py  loss.py  model.py  nddepth_test.csv  nddepth_test_v2.csv  nddepth_train.csv  normal.ipynb  nyu_test_v2.csv  nyu_test_v3.csv  plane_estimation.py  rewrite.ipynb  segmentation.py  test.ipynb  test.py  train.py
(+34 files in other folders)
